add styling color, image with css

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <title>Pizza Order</title>
   </head>
   <body>
-    <div class="container">
+    <div class="container text-center">
       <div class="jumbotron">
+        <img src="img/pizza.jpg" alt="cat eating pizza" />
         <h1>Poppin' Pizza</h1>
-        <p>Pizza for the whole family.</p>
+        <p>Pizza for the whole family. <br>Pick a size, toppings and create the pizza of your dreams.</p>
       </div>
       <div id = "pizzaOrder">
         <form>
@@ -57,8 +58,8 @@
           <button type="submit" class="btn">Order!</button>
         </form>
       </div>
-      <div>
-        <p class=priceOutcome>Your pizza will be $<span class="priceShow"></span></p>
+      <div id="priceOutcome" class="well">
+        <p>Your pizza will be $<span class="priceShow"></span></p>
       </div>
     </div>
   </body>
