add more toppings selection

--- a/index.html
+++ b/index.html
@@ -51,6 +51,39 @@
               <input type="checkbox" id="bacon" value="1" name="toppings">
               Bacon
             </label>
+            <label class="checkbox-inline" for="artichokes">
+              <input type="checkbox" id="artichokes" value="1" name="toppings">
+              Artichokes
+            </label>
+            <label class="checkbox-inline" for="egg">
+              <input type="checkbox" id="egg" value="1" name="toppings">
+              Fried Egg
+            </label>
+            <br><br>
+            <label class="checkbox-inline" for="prosciutto">
+              <input type="checkbox" id="prosciutto" value="1" name="toppings">
+              Prosciutto
+            </label>
+            <label class="checkbox-inline" for="basil">
+              <input type="checkbox" id="basil" value="1" name="toppings">
+              Basil
+            </label>
+            <label class="checkbox-inline" for="tomatoes">
+              <input type="checkbox" id="tomatoes" value="1" name="toppings">
+              Tomatoes
+            </label>
+            <label class="checkbox-inline" for="garlic">
+              <input type="checkbox" id="garlic" value="1" name="toppings">
+              Garlic
+            </label>
+            <label class="checkbox-inline" for="arugula">
+              <input type="checkbox" id="arugula" value="1" name="toppings">
+              Arugula
+            </label>
+            <label class="checkbox-inline" for="salami">
+              <input type="checkbox" id="salami" value="1" name="toppings">
+              Salami
+            </label>
           </div>
           <div class="well">
             <label for="input">How many pizzas?</label>
@@ -65,7 +98,7 @@
       <div class="row">
         <div class="col-md-4">
           <span class="glyphicon glyphicon-phone-alt" aria-hidden="true"></span>
-          <p>(503) 123-4567</p>
+          <p>Place an order now!<br>(503) 123-4567</p>
         </div>
         <div class="col-md-4">
           <a href="https://www.facebook.com/Dominos">
