make the button larger, round corners of image

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="container text-center">
       <div class="jumbotron">
-        <img src="img/pizza.jpg" alt="cat eating pizza" />
+        <img src="img/pizza.jpg" alt="cat eating pizza" class="img-rounded"/>
         <h1>Poppin' Pizza</h1>
         <p>Pizza for the whole family. <br>Pick a size, toppings and create the pizza of your dreams.</p>
       </div>
@@ -89,7 +89,7 @@
             <label for="input">How many pizzas?</label>
             <input id="userInput" type="number" min="1" step="1" data-bind="value:replyNumber">
           </div>
-          <button type="submit" class="btn">Pizza Price</button>
+          <button type="submit" class="btn btn-lg">Pizza Price</button>
         </form>
       </div>
       <div id="priceOutcome" class="well">
