change image to round, color of jumbotron

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="container text-center">
       <div class="jumbotron">
-        <img src="img/pizza.jpg" alt="cat eating pizza" class="img-rounded"/>
+        <img src="img/pizza.jpg" alt="cat eating pizza" class="img-circle"/>
         <h1>Poppin' Pizza</h1>
         <p>Pizza for the whole family. <br>Pick a size, toppings and create the pizza of your dreams.</p>
       </div>
