add fancy toppings option

--- a/index.html
+++ b/index.html
@@ -51,19 +51,6 @@
               <input type="checkbox" id="bacon" value="1" name="toppings">
               Bacon
             </label>
-            <label class="checkbox-inline" for="artichokes">
-              <input type="checkbox" id="artichokes" value="1" name="toppings">
-              Artichokes
-            </label>
-            <label class="checkbox-inline" for="egg">
-              <input type="checkbox" id="egg" value="1" name="toppings">
-              Fried Egg
-            </label>
-            <br><br>
-            <label class="checkbox-inline" for="prosciutto">
-              <input type="checkbox" id="prosciutto" value="1" name="toppings">
-              Prosciutto
-            </label>
             <label class="checkbox-inline" for="basil">
               <input type="checkbox" id="basil" value="1" name="toppings">
               Basil
@@ -76,13 +63,28 @@
               <input type="checkbox" id="garlic" value="1" name="toppings">
               Garlic
             </label>
+          </div>
+          <div class="well">
+            <h4>How about those fancy toppings?</h4>
+            <label class="checkbox-inline" for="salami">
+              <input type="checkbox" id="salami" value="1" name="fancy">
+              Salami
+            </label>
             <label class="checkbox-inline" for="arugula">
-              <input type="checkbox" id="arugula" value="1" name="toppings">
+              <input type="checkbox" id="arugula" value="1" name="fancy">
               Arugula
             </label>
-            <label class="checkbox-inline" for="salami">
-              <input type="checkbox" id="salami" value="1" name="toppings">
-              Salami
+            <label class="checkbox-inline" for="artichokes">
+              <input type="checkbox" id="artichokes" value="1" name="fancy">
+              Artichokes
+            </label>
+            <label class="checkbox-inline" for="egg">
+              <input type="checkbox" id="egg" value="1" name="fancy">
+              Fried Egg
+            </label>
+            <label class="checkbox-inline" for="prosciutto">
+              <input type="checkbox" id="prosciutto" value="1" name="fancy">
+              Prosciutto
             </label>
           </div>
           <div class="well">
