add font style Raleway to body

--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
             </label>
           </div>
           <div class="well">
-            <label for="input">How many pizzas?</label>
+            <h4>How many pizzas would you like?</h4>
+            <label for="input"></label>
             <input id="userInput" type="number" min="1" step="1" data-bind="value:replyNumber">
           </div>
           <button type="submit" class="btn btn-lg">Pizza Price</button>
@@ -97,7 +98,7 @@
       <div id="priceOutcome" class="well">
         <p>Your pizza will be $<span class="priceShow"></span><br>Remember to tip your pizza driver!</p>
       </div>
-      <div class="row">
+      <div id="iconP" class="row">
         <div class="col-md-4">
           <span class="glyphicon glyphicon-phone-alt" aria-hidden="true"></span>
           <p>Place an order now!<br>(503) 123-4567</p>
